--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -134,12 +134,20 @@ h2 {
 
 .tm-border-bottom {
     border-bottom: 1px solid white;
-    padding-bottom: 48px;
+    padding-bottom: 20px;
+}
+
+.tm-border-bottom-noline {
+    padding-bottom: 20px;
 }
 
 .tm-border-top {
     border-top: 1px solid white;
-    padding-top: 48px;
+    padding-top: 20px;
+}
+
+.tm-border-top-noline {
+    padding-top: 20px;
 }
 
 .navbar .navbar-nav .nav-item.selected .nav-link,
@@ -187,7 +195,7 @@ h2 {
 }
 
 .page-width-1 {
-    max-width: 810px;
+    max-width: 950px;
 }
 
 .page-width-2 {
@@ -210,7 +218,7 @@ h2 {
 .intro-left {
     margin-right: 20px;
     padding: 30px 40px;
-    max-width: 505px;    
+    max-width: 590px;    
 }
 
 .intro-img-1 {
