--- a/css/personal.css
+++ b/css/personal.css
@@ -56,6 +56,7 @@
     z-index: 2;
     background-color: #281A17;
     margin-top: 40px;
+    height:fit-content;
 }
 
 .research-text.left{
@@ -80,10 +81,6 @@
     margin-left: 10%;
     margin-right: 10%;
     margin-bottom: 40px;
-}
-
-.blog-item{
-
 }
 
 .blog-hidden{
